--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prepare": "husky install",
     "dev": "next dev",
     "debug": "NODE_OPTIONS='--inspect' next dev",
+    "export":"next export",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,7 +21,6 @@
     "date-fns": "^2.29.3",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
-    "husky": "^8.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
